// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-notification renders correctly in the information variant 1`] = `
<ecl-notification close-label="Close" ecl-script="" message-title="Title for a message" variant="information">
  <!---->
  <div class="ecl-notification ecl-notification--info" data-ecl-notification role="alert">
    <ecl-icon style-class="ecl-notification__icon sc-ecl-notification-ec">
      <span class="ecl-icon ecl-notification__icon sc-ecl-notification-ec wt-icon--information wt-icon--m wt-icon--placeholder"></span>
    </ecl-icon>
    <div class="ecl-notification__content">
      <ecl-button data-ecl-notification-close style-class="ecl-notification__close sc-ecl-notification-ec">
        <!---->
        <button class="ecl-button ecl-button--icon-only ecl-button--tertiary ecl-notification__close sc-ecl-notification-ec" data-ecl-notification-close="eclNotificationClose" type="button">
          <span class="ecl-button__container">
            <span class="ecl-button__label" data-ecl-label>
              Close
            </span>
            <ecl-icon slot="icon-after" style-class="ecl-button__icon">
              <span class="ecl-button__icon ecl-icon sc-ecl-button-ec wt-icon--close wt-icon--placeholder wt-icon--xs"></span>
            </ecl-icon>
          </span>
        </button>
      </ecl-button>
      <div class="ecl-notification__description">
        Lorem ipsum dolor sit amet
      </div>
      <div class="ecl-notification__link sc-ecl-notification-ec">
        <ecl-link path="/example.html" slot="notification-link">
          <!---->
          <a class="ecl-link ecl-notification__link sc-ecl-notification-ec" href="/example.html">
            <span class="ecl-link__label">
              Lorem ipsum
            </span>
          </a>
        </ecl-link>
      </div>
    </div>
  </div>
</ecl-notification>
`;

exports[`ecl-notification renders correctly in the success variant 1`] = `
<ecl-notification close-label="Close" ecl-script="" message-title="Title for a message" variant="success">
  <!---->
  <div class="ecl-notification ecl-notification--success" data-ecl-notification role="alert">
    <ecl-icon style-class="ecl-notification__icon sc-ecl-notification-ec">
      <span class="ecl-icon ecl-notification__icon sc-ecl-notification-ec wt-icon--check-filled wt-icon--m wt-icon--placeholder"></span>
    </ecl-icon>
    <div class="ecl-notification__content">
      <ecl-button data-ecl-notification-close style-class="ecl-notification__close sc-ecl-notification-ec">
        <!---->
        <button class="ecl-button ecl-button--icon-only ecl-button--tertiary ecl-notification__close sc-ecl-notification-ec" data-ecl-notification-close="eclNotificationClose" type="button">
          <span class="ecl-button__container">
            <span class="ecl-button__label" data-ecl-label>
              Close
            </span>
            <ecl-icon slot="icon-after" style-class="ecl-button__icon">
              <span class="ecl-button__icon ecl-icon sc-ecl-button-ec wt-icon--close wt-icon--placeholder wt-icon--xs"></span>
            </ecl-icon>
          </span>
        </button>
      </ecl-button>
      <div class="ecl-notification__description">
        Lorem ipsum dolor sit amet
      </div>
      <div class="ecl-notification__link sc-ecl-notification-ec">
        <ecl-link path="/example.html" slot="notification-link">
          <!---->
          <a class="ecl-link ecl-notification__link sc-ecl-notification-ec" href="/example.html">
            <span class="ecl-link__label">
              Lorem ipsum
            </span>
          </a>
        </ecl-link>
      </div>
    </div>
  </div>
</ecl-notification>
`;

exports[`ecl-notification renders correctly without the close button 1`] = `
<ecl-notification message-title="Title for a message" variant="information" with-close="false">
  <!---->
  <div class="ecl-notification ecl-notification--info" data-ecl-notification role="alert">
    <ecl-icon style-class="ecl-notification__icon sc-ecl-notification-ec">
      <span class="ecl-icon ecl-notification__icon sc-ecl-notification-ec wt-icon--information wt-icon--m wt-icon--placeholder"></span>
    </ecl-icon>
    <div class="ecl-notification__content">
      <div class="ecl-notification__description">
        Lorem ipsum dolor sit amet
      </div>
      <div class="ecl-notification__link sc-ecl-notification-ec">
        <ecl-link path="/example.html" slot="notification-link">
          <!---->
          <a class="ecl-link ecl-notification__link sc-ecl-notification-ec" href="/example.html">
            <span class="ecl-link__label">
              Lorem ipsum
            </span>
          </a>
        </ecl-link>
      </div>
    </div>
  </div>
</ecl-notification>
`;
